HLLc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> compound_statement .
Rule 2     compound_statement -> BEGIN optional_statements END
Rule 3     expression -> ID
Rule 4     empty -> <empty>
Rule 5     optional_statements -> statement_list
Rule 6     optional_statements -> empty
Rule 7     statement_list -> statement
Rule 8     statement_list -> statement_list ; statement
Rule 9     statement -> ID ASSIGNOP expression
Rule 10    statement -> REPEAT statement_list UNTIL expression
Rule 11    statement -> WHILE expression DO statement
Rule 12    statement -> WRITELN ( expression )
Rule 13    statement -> compound_statement
Rule 14    expression -> expression + expression
Rule 15    expression -> expression - expression
Rule 16    expression -> expression * expression
Rule 17    expression -> expression / expression
Rule 18    expression -> expression ^ expression
Rule 19    expression -> expression % expression
Rule 20    expression -> POWER ( expression , expression )
Rule 21    expression -> SQRT ( expression )
Rule 22    expression -> IFTHEN ( expression , expression , expression )
Rule 23    expression -> SIN ( expression )
Rule 24    expression -> FACTORIAL ( expression )
Rule 25    expression -> NUMBER
Rule 26    expression -> ( expression )
Rule 27    expression -> - expression
Rule 28    expression -> + expression
Rule 29    expression -> expression = expression
Rule 30    expression -> expression < expression
Rule 31    expression -> expression > expression
Rule 32    expression -> expression LTE expression
Rule 33    expression -> expression GTE expression
Rule 34    expression -> expression NET expression

Terminals, with rules where they appear

%                    : 19
(                    : 12 20 21 22 23 24 26
)                    : 12 20 21 22 23 24 26
*                    : 16
+                    : 14 28
,                    : 20 22 22
-                    : 15 27
.                    : 1
/                    : 17
;                    : 8
<                    : 30
=                    : 29
>                    : 31
ASSIGNOP             : 9
BEGIN                : 2
DO                   : 11
END                  : 2
FACTORIAL            : 24
GTE                  : 33
ID                   : 3 9
IFTHEN               : 22
LTE                  : 32
NET                  : 34
NUMBER               : 25
POWER                : 20
REPEAT               : 10
SIN                  : 23
SQRT                 : 21
UNTIL                : 10
WHILE                : 11
WRITELN              : 12
^                    : 18
error                : 

Nonterminals, with rules where they appear

compound_statement   : 1 13
empty                : 6
expression           : 9 10 11 12 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 22 22 22 23 24 26 27 28 29 29 30 30 31 31 32 32 33 33 34 34
optional_statements  : 2
program              : 0
statement            : 7 8 11
statement_list       : 5 8 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . compound_statement .
    (2) compound_statement -> . BEGIN optional_statements END

    BEGIN           shift and go to state 3

    program                        shift and go to state 1
    compound_statement             shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> compound_statement . .

    .               shift and go to state 4


state 3

    (2) compound_statement -> BEGIN . optional_statements END
    (5) optional_statements -> . statement_list
    (6) optional_statements -> . empty
    (7) statement_list -> . statement
    (8) statement_list -> . statement_list ; statement
    (4) empty -> .
    (9) statement -> . ID ASSIGNOP expression
    (10) statement -> . REPEAT statement_list UNTIL expression
    (11) statement -> . WHILE expression DO statement
    (12) statement -> . WRITELN ( expression )
    (13) statement -> . compound_statement
    (2) compound_statement -> . BEGIN optional_statements END

    END             reduce using rule 4 (empty -> .)
    ID              shift and go to state 9
    REPEAT          shift and go to state 10
    WHILE           shift and go to state 11
    WRITELN         shift and go to state 12
    BEGIN           shift and go to state 3

    optional_statements            shift and go to state 5
    statement_list                 shift and go to state 6
    empty                          shift and go to state 7
    statement                      shift and go to state 8
    compound_statement             shift and go to state 13

state 4

    (1) program -> compound_statement . .

    $end            reduce using rule 1 (program -> compound_statement . .)


state 5

    (2) compound_statement -> BEGIN optional_statements . END

    END             shift and go to state 14


state 6

    (5) optional_statements -> statement_list .
    (8) statement_list -> statement_list . ; statement

    END             reduce using rule 5 (optional_statements -> statement_list .)
    ;               shift and go to state 15


state 7

    (6) optional_statements -> empty .

    END             reduce using rule 6 (optional_statements -> empty .)


state 8

    (7) statement_list -> statement .

    ;               reduce using rule 7 (statement_list -> statement .)
    END             reduce using rule 7 (statement_list -> statement .)
    UNTIL           reduce using rule 7 (statement_list -> statement .)


state 9

    (9) statement -> ID . ASSIGNOP expression

    ASSIGNOP        shift and go to state 16


state 10

    (10) statement -> REPEAT . statement_list UNTIL expression
    (7) statement_list -> . statement
    (8) statement_list -> . statement_list ; statement
    (9) statement -> . ID ASSIGNOP expression
    (10) statement -> . REPEAT statement_list UNTIL expression
    (11) statement -> . WHILE expression DO statement
    (12) statement -> . WRITELN ( expression )
    (13) statement -> . compound_statement
    (2) compound_statement -> . BEGIN optional_statements END

    ID              shift and go to state 9
    REPEAT          shift and go to state 10
    WHILE           shift and go to state 11
    WRITELN         shift and go to state 12
    BEGIN           shift and go to state 3

    statement_list                 shift and go to state 17
    statement                      shift and go to state 8
    compound_statement             shift and go to state 13

state 11

    (11) statement -> WHILE . expression DO statement
    (3) expression -> . ID
    (14) expression -> . expression + expression
    (15) expression -> . expression - expression
    (16) expression -> . expression * expression
    (17) expression -> . expression / expression
    (18) expression -> . expression ^ expression
    (19) expression -> . expression % expression
    (20) expression -> . POWER ( expression , expression )
    (21) expression -> . SQRT ( expression )
    (22) expression -> . IFTHEN ( expression , expression , expression )
    (23) expression -> . SIN ( expression )
    (24) expression -> . FACTORIAL ( expression )
    (25) expression -> . NUMBER
    (26) expression -> . ( expression )
    (27) expression -> . - expression
    (28) expression -> . + expression
    (29) expression -> . expression = expression
    (30) expression -> . expression < expression
    (31) expression -> . expression > expression
    (32) expression -> . expression LTE expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression NET expression

    ID              shift and go to state 19
    POWER           shift and go to state 22
    SQRT            shift and go to state 24
    IFTHEN          shift and go to state 25
    SIN             shift and go to state 26
    FACTORIAL       shift and go to state 27
    NUMBER          shift and go to state 28
    (               shift and go to state 23
    -               shift and go to state 21
    +               shift and go to state 20

    expression                     shift and go to state 18

state 12

    (12) statement -> WRITELN . ( expression )

    (               shift and go to state 29


state 13

    (13) statement -> compound_statement .

    ;               reduce using rule 13 (statement -> compound_statement .)
    END             reduce using rule 13 (statement -> compound_statement .)
    UNTIL           reduce using rule 13 (statement -> compound_statement .)


state 14

    (2) compound_statement -> BEGIN optional_statements END .

    .               reduce using rule 2 (compound_statement -> BEGIN optional_statements END .)
    ;               reduce using rule 2 (compound_statement -> BEGIN optional_statements END .)
    END             reduce using rule 2 (compound_statement -> BEGIN optional_statements END .)
    UNTIL           reduce using rule 2 (compound_statement -> BEGIN optional_statements END .)


state 15

    (8) statement_list -> statement_list ; . statement
    (9) statement -> . ID ASSIGNOP expression
    (10) statement -> . REPEAT statement_list UNTIL expression
    (11) statement -> . WHILE expression DO statement
    (12) statement -> . WRITELN ( expression )
    (13) statement -> . compound_statement
    (2) compound_statement -> . BEGIN optional_statements END

    ID              shift and go to state 9
    REPEAT          shift and go to state 10
    WHILE           shift and go to state 11
    WRITELN         shift and go to state 12
    BEGIN           shift and go to state 3

    statement                      shift and go to state 30
    compound_statement             shift and go to state 13

state 16

    (9) statement -> ID ASSIGNOP . expression
    (3) expression -> . ID
    (14) expression -> . expression + expression
    (15) expression -> . expression - expression
    (16) expression -> . expression * expression
    (17) expression -> . expression / expression
    (18) expression -> . expression ^ expression
    (19) expression -> . expression % expression
    (20) expression -> . POWER ( expression , expression )
    (21) expression -> . SQRT ( expression )
    (22) expression -> . IFTHEN ( expression , expression , expression )
    (23) expression -> . SIN ( expression )
    (24) expression -> . FACTORIAL ( expression )
    (25) expression -> . NUMBER
    (26) expression -> . ( expression )
    (27) expression -> . - expression
    (28) expression -> . + expression
    (29) expression -> . expression = expression
    (30) expression -> . expression < expression
    (31) expression -> . expression > expression
    (32) expression -> . expression LTE expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression NET expression

    ID              shift and go to state 19
    POWER           shift and go to state 22
    SQRT            shift and go to state 24
    IFTHEN          shift and go to state 25
    SIN             shift and go to state 26
    FACTORIAL       shift and go to state 27
    NUMBER          shift and go to state 28
    (               shift and go to state 23
    -               shift and go to state 21
    +               shift and go to state 20

    expression                     shift and go to state 31

state 17

    (10) statement -> REPEAT statement_list . UNTIL expression
    (8) statement_list -> statement_list . ; statement

    UNTIL           shift and go to state 32
    ;               shift and go to state 15


state 18

    (11) statement -> WHILE expression . DO statement
    (14) expression -> expression . + expression
    (15) expression -> expression . - expression
    (16) expression -> expression . * expression
    (17) expression -> expression . / expression
    (18) expression -> expression . ^ expression
    (19) expression -> expression . % expression
    (29) expression -> expression . = expression
    (30) expression -> expression . < expression
    (31) expression -> expression . > expression
    (32) expression -> expression . LTE expression
    (33) expression -> expression . GTE expression
    (34) expression -> expression . NET expression

    DO              shift and go to state 33
    +               shift and go to state 34
    -               shift and go to state 35
    *               shift and go to state 36
    /               shift and go to state 37
    ^               shift and go to state 38
    %               shift and go to state 39
    =               shift and go to state 40
    <               shift and go to state 41
    >               shift and go to state 42
    LTE             shift and go to state 43
    GTE             shift and go to state 44
    NET             shift and go to state 45


state 19

    (3) expression -> ID .

    DO              reduce using rule 3 (expression -> ID .)
    +               reduce using rule 3 (expression -> ID .)
    -               reduce using rule 3 (expression -> ID .)
    *               reduce using rule 3 (expression -> ID .)
    /               reduce using rule 3 (expression -> ID .)
    ^               reduce using rule 3 (expression -> ID .)
    %               reduce using rule 3 (expression -> ID .)
    =               reduce using rule 3 (expression -> ID .)
    <               reduce using rule 3 (expression -> ID .)
    >               reduce using rule 3 (expression -> ID .)
    LTE             reduce using rule 3 (expression -> ID .)
    GTE             reduce using rule 3 (expression -> ID .)
    NET             reduce using rule 3 (expression -> ID .)
    ;               reduce using rule 3 (expression -> ID .)
    END             reduce using rule 3 (expression -> ID .)
    UNTIL           reduce using rule 3 (expression -> ID .)
    )               reduce using rule 3 (expression -> ID .)
    ,               reduce using rule 3 (expression -> ID .)


state 20

    (28) expression -> + . expression
    (3) expression -> . ID
    (14) expression -> . expression + expression
    (15) expression -> . expression - expression
    (16) expression -> . expression * expression
    (17) expression -> . expression / expression
    (18) expression -> . expression ^ expression
    (19) expression -> . expression % expression
    (20) expression -> . POWER ( expression , expression )
    (21) expression -> . SQRT ( expression )
    (22) expression -> . IFTHEN ( expression , expression , expression )
    (23) expression -> . SIN ( expression )
    (24) expression -> . FACTORIAL ( expression )
    (25) expression -> . NUMBER
    (26) expression -> . ( expression )
    (27) expression -> . - expression
    (28) expression -> . + expression
    (29) expression -> . expression = expression
    (30) expression -> . expression < expression
    (31) expression -> . expression > expression
    (32) expression -> . expression LTE expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression NET expression

    ID              shift and go to state 19
    POWER           shift and go to state 22
    SQRT            shift and go to state 24
    IFTHEN          shift and go to state 25
    SIN             shift and go to state 26
    FACTORIAL       shift and go to state 27
    NUMBER          shift and go to state 28
    (               shift and go to state 23
    -               shift and go to state 21
    +               shift and go to state 20

    expression                     shift and go to state 46

state 21

    (27) expression -> - . expression
    (3) expression -> . ID
    (14) expression -> . expression + expression
    (15) expression -> . expression - expression
    (16) expression -> . expression * expression
    (17) expression -> . expression / expression
    (18) expression -> . expression ^ expression
    (19) expression -> . expression % expression
    (20) expression -> . POWER ( expression , expression )
    (21) expression -> . SQRT ( expression )
    (22) expression -> . IFTHEN ( expression , expression , expression )
    (23) expression -> . SIN ( expression )
    (24) expression -> . FACTORIAL ( expression )
    (25) expression -> . NUMBER
    (26) expression -> . ( expression )
    (27) expression -> . - expression
    (28) expression -> . + expression
    (29) expression -> . expression = expression
    (30) expression -> . expression < expression
    (31) expression -> . expression > expression
    (32) expression -> . expression LTE expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression NET expression

    ID              shift and go to state 19
    POWER           shift and go to state 22
    SQRT            shift and go to state 24
    IFTHEN          shift and go to state 25
    SIN             shift and go to state 26
    FACTORIAL       shift and go to state 27
    NUMBER          shift and go to state 28
    (               shift and go to state 23
    -               shift and go to state 21
    +               shift and go to state 20

    expression                     shift and go to state 47

state 22

    (20) expression -> POWER . ( expression , expression )

    (               shift and go to state 48


state 23

    (26) expression -> ( . expression )
    (3) expression -> . ID
    (14) expression -> . expression + expression
    (15) expression -> . expression - expression
    (16) expression -> . expression * expression
    (17) expression -> . expression / expression
    (18) expression -> . expression ^ expression
    (19) expression -> . expression % expression
    (20) expression -> . POWER ( expression , expression )
    (21) expression -> . SQRT ( expression )
    (22) expression -> . IFTHEN ( expression , expression , expression )
    (23) expression -> . SIN ( expression )
    (24) expression -> . FACTORIAL ( expression )
    (25) expression -> . NUMBER
    (26) expression -> . ( expression )
    (27) expression -> . - expression
    (28) expression -> . + expression
    (29) expression -> . expression = expression
    (30) expression -> . expression < expression
    (31) expression -> . expression > expression
    (32) expression -> . expression LTE expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression NET expression

    ID              shift and go to state 19
    POWER           shift and go to state 22
    SQRT            shift and go to state 24
    IFTHEN          shift and go to state 25
    SIN             shift and go to state 26
    FACTORIAL       shift and go to state 27
    NUMBER          shift and go to state 28
    (               shift and go to state 23
    -               shift and go to state 21
    +               shift and go to state 20

    expression                     shift and go to state 49

state 24

    (21) expression -> SQRT . ( expression )

    (               shift and go to state 50


state 25

    (22) expression -> IFTHEN . ( expression , expression , expression )

    (               shift and go to state 51


state 26

    (23) expression -> SIN . ( expression )

    (               shift and go to state 52


state 27

    (24) expression -> FACTORIAL . ( expression )

    (               shift and go to state 53


state 28

    (25) expression -> NUMBER .

    DO              reduce using rule 25 (expression -> NUMBER .)
    +               reduce using rule 25 (expression -> NUMBER .)
    -               reduce using rule 25 (expression -> NUMBER .)
    *               reduce using rule 25 (expression -> NUMBER .)
    /               reduce using rule 25 (expression -> NUMBER .)
    ^               reduce using rule 25 (expression -> NUMBER .)
    %               reduce using rule 25 (expression -> NUMBER .)
    =               reduce using rule 25 (expression -> NUMBER .)
    <               reduce using rule 25 (expression -> NUMBER .)
    >               reduce using rule 25 (expression -> NUMBER .)
    LTE             reduce using rule 25 (expression -> NUMBER .)
    GTE             reduce using rule 25 (expression -> NUMBER .)
    NET             reduce using rule 25 (expression -> NUMBER .)
    ;               reduce using rule 25 (expression -> NUMBER .)
    END             reduce using rule 25 (expression -> NUMBER .)
    UNTIL           reduce using rule 25 (expression -> NUMBER .)
    )               reduce using rule 25 (expression -> NUMBER .)
    ,               reduce using rule 25 (expression -> NUMBER .)


state 29

    (12) statement -> WRITELN ( . expression )
    (3) expression -> . ID
    (14) expression -> . expression + expression
    (15) expression -> . expression - expression
    (16) expression -> . expression * expression
    (17) expression -> . expression / expression
    (18) expression -> . expression ^ expression
    (19) expression -> . expression % expression
    (20) expression -> . POWER ( expression , expression )
    (21) expression -> . SQRT ( expression )
    (22) expression -> . IFTHEN ( expression , expression , expression )
    (23) expression -> . SIN ( expression )
    (24) expression -> . FACTORIAL ( expression )
    (25) expression -> . NUMBER
    (26) expression -> . ( expression )
    (27) expression -> . - expression
    (28) expression -> . + expression
    (29) expression -> . expression = expression
    (30) expression -> . expression < expression
    (31) expression -> . expression > expression
    (32) expression -> . expression LTE expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression NET expression

    ID              shift and go to state 19
    POWER           shift and go to state 22
    SQRT            shift and go to state 24
    IFTHEN          shift and go to state 25
    SIN             shift and go to state 26
    FACTORIAL       shift and go to state 27
    NUMBER          shift and go to state 28
    (               shift and go to state 23
    -               shift and go to state 21
    +               shift and go to state 20

    expression                     shift and go to state 54

state 30

    (8) statement_list -> statement_list ; statement .

    ;               reduce using rule 8 (statement_list -> statement_list ; statement .)
    END             reduce using rule 8 (statement_list -> statement_list ; statement .)
    UNTIL           reduce using rule 8 (statement_list -> statement_list ; statement .)


state 31

    (9) statement -> ID ASSIGNOP expression .
    (14) expression -> expression . + expression
    (15) expression -> expression . - expression
    (16) expression -> expression . * expression
    (17) expression -> expression . / expression
    (18) expression -> expression . ^ expression
    (19) expression -> expression . % expression
    (29) expression -> expression . = expression
    (30) expression -> expression . < expression
    (31) expression -> expression . > expression
    (32) expression -> expression . LTE expression
    (33) expression -> expression . GTE expression
    (34) expression -> expression . NET expression

    ;               reduce using rule 9 (statement -> ID ASSIGNOP expression .)
    END             reduce using rule 9 (statement -> ID ASSIGNOP expression .)
    UNTIL           reduce using rule 9 (statement -> ID ASSIGNOP expression .)
    +               shift and go to state 34
    -               shift and go to state 35
    *               shift and go to state 36
    /               shift and go to state 37
    ^               shift and go to state 38
    %               shift and go to state 39
    =               shift and go to state 40
    <               shift and go to state 41
    >               shift and go to state 42
    LTE             shift and go to state 43
    GTE             shift and go to state 44
    NET             shift and go to state 45


state 32

    (10) statement -> REPEAT statement_list UNTIL . expression
    (3) expression -> . ID
    (14) expression -> . expression + expression
    (15) expression -> . expression - expression
    (16) expression -> . expression * expression
    (17) expression -> . expression / expression
    (18) expression -> . expression ^ expression
    (19) expression -> . expression % expression
    (20) expression -> . POWER ( expression , expression )
    (21) expression -> . SQRT ( expression )
    (22) expression -> . IFTHEN ( expression , expression , expression )
    (23) expression -> . SIN ( expression )
    (24) expression -> . FACTORIAL ( expression )
    (25) expression -> . NUMBER
    (26) expression -> . ( expression )
    (27) expression -> . - expression
    (28) expression -> . + expression
    (29) expression -> . expression = expression
    (30) expression -> . expression < expression
    (31) expression -> . expression > expression
    (32) expression -> . expression LTE expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression NET expression

    ID              shift and go to state 19
    POWER           shift and go to state 22
    SQRT            shift and go to state 24
    IFTHEN          shift and go to state 25
    SIN             shift and go to state 26
    FACTORIAL       shift and go to state 27
    NUMBER          shift and go to state 28
    (               shift and go to state 23
    -               shift and go to state 21
    +               shift and go to state 20

    expression                     shift and go to state 55

state 33

    (11) statement -> WHILE expression DO . statement
    (9) statement -> . ID ASSIGNOP expression
    (10) statement -> . REPEAT statement_list UNTIL expression
    (11) statement -> . WHILE expression DO statement
    (12) statement -> . WRITELN ( expression )
    (13) statement -> . compound_statement
    (2) compound_statement -> . BEGIN optional_statements END

    ID              shift and go to state 9
    REPEAT          shift and go to state 10
    WHILE           shift and go to state 11
    WRITELN         shift and go to state 12
    BEGIN           shift and go to state 3

    statement                      shift and go to state 56
    compound_statement             shift and go to state 13

state 34

    (14) expression -> expression + . expression
    (3) expression -> . ID
    (14) expression -> . expression + expression
    (15) expression -> . expression - expression
    (16) expression -> . expression * expression
    (17) expression -> . expression / expression
    (18) expression -> . expression ^ expression
    (19) expression -> . expression % expression
    (20) expression -> . POWER ( expression , expression )
    (21) expression -> . SQRT ( expression )
    (22) expression -> . IFTHEN ( expression , expression , expression )
    (23) expression -> . SIN ( expression )
    (24) expression -> . FACTORIAL ( expression )
    (25) expression -> . NUMBER
    (26) expression -> . ( expression )
    (27) expression -> . - expression
    (28) expression -> . + expression
    (29) expression -> . expression = expression
    (30) expression -> . expression < expression
    (31) expression -> . expression > expression
    (32) expression -> . expression LTE expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression NET expression

    ID              shift and go to state 19
    POWER           shift and go to state 22
    SQRT            shift and go to state 24
    IFTHEN          shift and go to state 25
    SIN             shift and go to state 26
    FACTORIAL       shift and go to state 27
    NUMBER          shift and go to state 28
    (               shift and go to state 23
    -               shift and go to state 21
    +               shift and go to state 20

    expression                     shift and go to state 57

state 35

    (15) expression -> expression - . expression
    (3) expression -> . ID
    (14) expression -> . expression + expression
    (15) expression -> . expression - expression
    (16) expression -> . expression * expression
    (17) expression -> . expression / expression
    (18) expression -> . expression ^ expression
    (19) expression -> . expression % expression
    (20) expression -> . POWER ( expression , expression )
    (21) expression -> . SQRT ( expression )
    (22) expression -> . IFTHEN ( expression , expression , expression )
    (23) expression -> . SIN ( expression )
    (24) expression -> . FACTORIAL ( expression )
    (25) expression -> . NUMBER
    (26) expression -> . ( expression )
    (27) expression -> . - expression
    (28) expression -> . + expression
    (29) expression -> . expression = expression
    (30) expression -> . expression < expression
    (31) expression -> . expression > expression
    (32) expression -> . expression LTE expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression NET expression

    ID              shift and go to state 19
    POWER           shift and go to state 22
    SQRT            shift and go to state 24
    IFTHEN          shift and go to state 25
    SIN             shift and go to state 26
    FACTORIAL       shift and go to state 27
    NUMBER          shift and go to state 28
    (               shift and go to state 23
    -               shift and go to state 21
    +               shift and go to state 20

    expression                     shift and go to state 58

state 36

    (16) expression -> expression * . expression
    (3) expression -> . ID
    (14) expression -> . expression + expression
    (15) expression -> . expression - expression
    (16) expression -> . expression * expression
    (17) expression -> . expression / expression
    (18) expression -> . expression ^ expression
    (19) expression -> . expression % expression
    (20) expression -> . POWER ( expression , expression )
    (21) expression -> . SQRT ( expression )
    (22) expression -> . IFTHEN ( expression , expression , expression )
    (23) expression -> . SIN ( expression )
    (24) expression -> . FACTORIAL ( expression )
    (25) expression -> . NUMBER
    (26) expression -> . ( expression )
    (27) expression -> . - expression
    (28) expression -> . + expression
    (29) expression -> . expression = expression
    (30) expression -> . expression < expression
    (31) expression -> . expression > expression
    (32) expression -> . expression LTE expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression NET expression
